--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
                 </div>
                 <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">Mesmo que existam sempre novas teses e teorias sendo formuladas, a maior parte dos biólogos e estudiosos da área acredita que as aves sejam uma evolução dos dinossauros de duas pernas. Esse argumento tomou força graças aos fósseis da espécie Arqueopterix, encontrados na Alemanha em 1860.
+                        O pássaro simboliza a inteligência, a sabedoria, a leveza, o divino, a alma, a liberdade e a amizade. Por possuírem asas e o poder de voar, em muitas culturas são considerados mensageiros entre o céu e a terra.
+                        O Archaeopteryx foi considerado durante 150 anos como o primeiro ancestral das aves, mas na realidade não era mais que um simples dinossauro com aspecto de pássaro, segundo estudo que se volta, agora, para um parente seu, semelhante a um frango, encontrado recentemente na China.
+                        O Archaeopteryx foi considerado durante 150 anos como o primeiro ancestral das aves, mas na realidade não era mais que um simples dinossauro com aspecto de pássaro, segundo estudo que se volta, agora, para um parente seu, semelhante a um frango, encontrado recentemente na China.
                 </div>
             </div>
         </section>
