--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em  dois microfones" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="O pardal é uma ave pequena e robusta, com plumagem marrom e cinza. É uma espécie introduzida, muito comum em áreas urbanas e rurais." title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
@@ -59,11 +59,11 @@
                     <img src="img/image (1).png" class="rounded-pill" alt="" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
+                    <h2>O que são os passaros?</h2>
                     <p class="p-2">Mesmo que existam sempre novas teses e teorias sendo formuladas, a maior parte dos biólogos e estudiosos da área acredita que as aves sejam uma evolução dos dinossauros de duas pernas. Esse argumento tomou força graças aos fósseis da espécie Arqueopterix, encontrados na Alemanha em 1860.
                         O pássaro simboliza a inteligência, a sabedoria, a leveza, o divino, a alma, a liberdade e a amizade. Por possuírem asas e o poder de voar, em muitas culturas são considerados mensageiros entre o céu e a terra.
                         O Archaeopteryx foi considerado durante 150 anos como o primeiro ancestral das aves, mas na realidade não era mais que um simples dinossauro com aspecto de pássaro, segundo estudo que se volta, agora, para um parente seu, semelhante a um frango, encontrado recentemente na China.
-                        O Archaeopteryx foi considerado durante 150 anos como o primeiro ancestral das aves, mas na realidade não era mais que um simples dinossauro com aspecto de pássaro, segundo estudo que se volta, agora, para um parente seu, semelhante a um frango, encontrado recentemente na China.
+            
                 </div>
             </div>
         </section>
